[gd_scene load_steps=3 format=3 uid="uid://yx0fd1j705yc"]

[ext_resource type="Script" path="res://Sentence Based Algorithm/Algorithm Language/main.gd" id="1"]

[sub_resource type="Theme" id="1"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("1")
script = ExtResource("1")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Command" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="LineEdit" type="LineEdit" parent="Container/Command"]
layout_mode = 2
placeholder_text = "Input Text"
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true

[node name="ButtonPush" type="Button" parent="Container/Command"]
layout_mode = 2
text = "go"

[node name="Result" type="HBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[connection signal="focus_entered" from="Container/Command/LineEdit" to="." method="_on_line_edit_focus_entered"]
[connection signal="focus_exited" from="Container/Command/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="pressed" from="Container/Command/ButtonPush" to="." method="_on_ButtonPush_pressed"]
